@@ -8,9 +8,10 @@ project El is
    for Source_Dirs use ("src");
    for Library_Dir use Library_Dir;
    for Library_Name use "adael";
-   for Library_Kind use "static";
+   for Library_Kind use Config.Library_Type;
+   for Library_Version use "lib" & Project'Library_Name & ".so." & Version;
 
-   for Object_Dir use "./" & Config'Object_Dir & "/obj";
+   for Object_Dir use "./" & Config'Object_Dir & "/obj/el";
    for Exec_Dir use "./" & Config'Exec_Dir & "/bin";
 
    package Binder renames Config.Binder;
