@@ -1,5 +1,6 @@
 Version 1.4     -
   - New Eval function which accepts an Object as value
+  - Support for shared or static build configuration  
 
 Version 1.3     - Fev 2012
   - New helpers to evaluate the EL expressions of a list of properties
